fix: Improve color shade for main text and markdown bg. Fix contrast for `--c-on-accent` color in light theme #8
- Adjusted main text color and markdown background to better match with custom accent color
- Enhanced contrast for `--c-on-accent` color in light theme

Changes summary:
Improved color shade for main text and markdown background to better match with custom accent color. Enhanced contrast for `--c-on-accent` color in light theme. (#8)

--- a/src/sass/abstract/_vars.scss
+++ b/src/sass/abstract/_vars.scss
@@ -139,7 +139,8 @@ html.light {
 	/* ? ========== COLORS ========== */
 	--c-accent: hsl(var(--accent-hsl));
 	--c-accent-light: hsl(var(--accent-h), calc(var(--accent-s) / 2), calc(var(--accent-l) * 1.3));
-	--c-on-accent: hsl(var(--accent-h), var(--accent-s), calc(var(--accent-l) * 1.5));
+	// --c-on-accent: hsl(var(--accent-h), var(--accent-s), calc(var(--accent-l) * 1.8));
+	--c-on-accent: hsl(var(--accent-h), var(--accent-s), 88%);
 
 	/* ? ========== Text colors ========== */
 	--c-txt: hsl(var(--txt-hsl));
@@ -251,9 +252,12 @@ html.dark {
 	--accent-hsl: var(--accent-h) var(--accent-s) var(--accent-l);
 
 	/* --txt-hsl: 255 86% 92%; */
-	--txt-h: 255;
+	/* 	--txt-h: 255;
 	--txt-s: 86%;
-	--txt-l: 92%;
+	--txt-l: 92%; */
+	--txt-h: var(--accent-h);
+	--txt-s: 86%;
+	--txt-l: 94%;
 	--txt-hsl: var(--txt-h) var(--txt-s) var(--txt-l);
 
 	--surface-h: 249;
