--- a/src/sass/gpthemes/_gpth-v2.scss
+++ b/src/sass/gpthemes/_gpth-v2.scss
@@ -7,6 +7,7 @@
 		top: var(--top);
 		right: var(--right);
 		z-index: 10;
+		color: var(--c-on-accent) !important;
 		transition: transform 0.8s $easeInOutCirc;
 
 		// this add only for Firefox
@@ -67,6 +68,7 @@
 				padding: 0.5rem 0.8rem;
 				pointer-events: none;
 				background-color: var(--c-bg-tooltip);
+				// color: var(--c-on-accent);
 				opacity: 0;
 				transform: translate(-100%, -50%);
 				transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
@@ -93,7 +95,7 @@
 		}
 	}
 	&__options {
-		--c-alpha: 0.5;
+		--c-alpha: 0.2;
 
 		pointer-events: none;
 		opacity: 0;
@@ -337,7 +339,7 @@
 	} */
 }
 
-html.light {
+/* html.light {
 	& [data-gpth-theme]::after,
 	.gpth__svg-icon::after {
 		color: var(--c-txt);
@@ -349,3 +351,4 @@ html.dark {
 		color: var(--c-on-accent);
 	}
 }
+ */
